Bug 530614: accept fonts (e.g. Arial Unicode MS) despite incorrect cmap language tag. r=jdaggett